--- a/src/less/quicklook.less
+++ b/src/less/quicklook.less
@@ -1,5 +1,15 @@
 #quicklook_container{
-    transition: all 1s ease-in-out;
+    transition: height 0.6s ease-in-out, width 0.6s ease-in-out;
     z-index:10;
     position: absolute;
+    overflow: hidden;
+    iframe{
+        border: none;
+        zoom: 0;
+        transition: all 0.6s ease-in-out;
+        transform: scale(0);
+        transform-origin: left bottom;
+        position: absolute;
+        top:0px;
+    }
 }
