--- a/src/less/quicklook.less
+++ b/src/less/quicklook.less
@@ -12,4 +12,13 @@
         position: absolute;
         top:0px;
     }
+    .close{
+        display: none;
+        position: absolute;
+        top:10px;
+        right:10px;
+        font-weight: bold;
+        z-index:2;
+        font-family: Arial, sans-serif;
+    }
 }
